# meshriderwave

./: .cursorrules  .gitignore  ADVANCED_FEATURES_2026.md  BUG_BOUNTY_AUDIT_REPORT.md  CLAUDE.md  EXECUTIVE_SUMMARY.md  HANDOFF.md  PROJECT_BRIEF.md  QUICK-REFERENCE.md  RACE_CONDITION_FIXES_SUMMARY.md  README.md  STRATEGIC_ANALYSIS_BILLION_DOLLAR_PTT_APP.md  TEST_SUMMARY.md  build.gradle.kts  claude-progress.txt  features.json  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/kotlin/com/doodlelabs/meshriderwave/ptt/: MilitaryPttTest.kt  PttEndToEndTest.kt  PttInstrumentedTest.kt
app/src/androidTest/kotlin/com/doodlelabs/meshriderwave/test/: TestMetrics.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ptt/: AudioCapture.cpp  AudioEngine.cpp  AudioEngine.h  AudioEngineTests.md  AudioPlayback.cpp  JniBridge.cpp  NoiseSuppressor.cpp  NoiseSuppressor.h  OpusCodec.cpp  OpusCodec.h  RtpPacketizer.cpp  RtpPacketizer.h  VadProcessor.cpp  VadProcessor.h
app/src/main/kotlin/com/doodlelabs/meshriderwave/: MeshRiderApp.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/core/: BootReceiver.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/core/atak/: ATAKBridge.kt  ATAKIntents.kt  CoTManager.kt  CoTMessage.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/core/audio/: AdaptiveJitterBuffer.kt  MulticastAudioManager.kt  OpusCodecManager.kt  OpusFallbackCodec.kt  RTPPacketManager.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/core/crash/: LocalCrashHandler.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/core/crypto/: CryptoManager.kt  MLSGroupManager.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/core/di/: AppModule.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/core/discovery/: BeaconManager.kt  ContactAddressSync.kt  IdentityBeacon.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/core/emergency/: SOSManager.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/presentation/: MainActivity.kt
app/src/main/kotlin/com/doodlelabs/meshriderwave/ptt/: EmergencyManager.kt  FloorControlProtocol.kt  PttAudioEngine.kt  PttNoiseSuppressor.kt  PttQualityIndicator.kt  PttRecordingManager.kt  PttService.kt  PttTrainingEngine.kt  PttVadDetector.kt  PttWebRtcManager.kt  WorkingPttManager.kt  WorkingPttScreen.kt  XCoverPttButtonReceiver.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml  ic_stop.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
app/src/test/kotlin/com/doodlelabs/meshriderwave/ptt/: FloorControlProtocolTest.kt  PttWebRtcManagerTest.kt
atak-plugin/: README.md  build.gradle.kts
atak-plugin/atak-stubs/: build.gradle.kts
atak-plugin/atak-stubs/src/main/: AndroidManifest.xml
atak-plugin/atak-stubs/src/main/java/transapps/mapi/: MapView.kt
atak-plugin/src/main/: AndroidManifest.xml
atak-plugin/src/main/java/com/doodlelabs/meshriderwave/atak/: MRWaveMapComponent.kt  MRWavePlugin.kt  MRWavePluginLifecycleProvider.kt  MRWavePluginService.kt
atak-plugin/src/main/res/drawable/: ic_channel.xml  ic_mic.xml  ic_mrwave_plugin.xml
atak-plugin/src/main/res/values/: strings.xml
docs/: 3GPP_MCPTT_DEEP_RESEARCH.md  ANDROID_ARCHITECTURE_RESEARCH.md  API_REFERENCE.md  ARCHITECTURE.md  COMPETITIVE-BATTLE-CARDS.md  DEVELOPER_GUIDE.md  FIELD_TESTING.md  FINANCIAL-PROJECTIONS.md  GO-TO-MARKET-STRATEGY.md  MANET_MESH_RESEARCH.md  MANET_MESH_RESEARCH_REPORT.md  MANET_PTT_Billion_Dollar_Market_Analysis.md  MCPTT-ARCHITECTURE-COMPARISON.md  MILITARY_STANDARDS_RESEARCH_REPORT.md  Market_Analysis_Executive_Summary.md  PROJECT_BOARD.docx  PROJECT_BOARD.md  PTT_ARCHITECTURE_RESEARCH.md  PTT_Business_Model_Executive_Summary.md  PTT_Business_Model_Research.md  PTT_GUIDE.docx  PTT_GUIDE.html  PTT_GUIDE.md  PTT_MILITARY_ENHANCEMENTS.md  PTT_TACTICAL_COMMS_MARKET_RESEARCH.md  RF_RADIO_TECHNICAL_ANALYSIS.md  SAMSUNG_TACTICAL_RESEARCH.md  TACTICAL_PTT_SECURITY_ARCHITECTURE.md  VISION-MCPTT-GATEWAY.md  WEBRTC_PTT_RESEARCH.md
gradle/: libs.versions.toml
playground/: index.html
(+105 files in other folders)
